[package]
name = "proxy_prawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
bytes = "1.4.0"
futures = "0.3.28"
http = "0.2.9"
http-body = "0.4.5"
hyper = { version = "0.14.27", features = ["client"] }
hyper-tls = "0.5.0"
log = "0.4.19"
miette = "5.10.0"
reqwest = { version = "0.11.18", features = ["gzip", "json"] }
schematic = "0.11.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
mockall = { version = "0.11.4", features = ["nightly"] }
mockito = "1.1.0"
mry = "0.2.6"
tokio-test = "0.4.2"
